--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "helmet": "^5.1.0",
     "pg": "^8.7.3"
   }
 }
