--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "helmet": "^5.1.0",
+    "password-validator": "^5.3.0",
     "pg": "^8.7.3"
   }
 }
